--- a/reference-only/api/package.json
+++ b/reference-only/api/package.json
@@ -18,6 +18,7 @@
   "author": "tu",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
