--- a/reference-only/api/package.json
+++ b/reference-only/api/package.json
@@ -12,6 +12,7 @@
     "express",
     "sequelize",
     "mysql",
+    "excel",
     "rest",
     "api"
   ],
@@ -21,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
