--- a/reference-only/api/package.json
+++ b/reference-only/api/package.json
@@ -25,12 +25,14 @@
     "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react-google-login": "^5.2.2",
-    "sequelize": "^6.9.0"
+    "read-excel-file": "^5.2.25",
+    "sequelize": "^6.11.0"
   }
 }
