--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.2.1",
     "react-google-login": "^5.2.2",
     "read-excel-file": "^5.2.25",
     "sequelize": "^6.11.0"
