--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.11.0",
+    "googleapis": "^92.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
