- Add a controller file to send mail through gmail (Not working) - Add Forgot password (Not working) - Modify table UploadUser - Remove API Download template in BE and move it to FE

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 #JWT_SECRET_KEY=ggclassroom-2469
 
-GOOGLE_CLIENT_ID=567314733845-pou9amli9shnns3cm6a3q3g01b0kl1ep.apps.googleusercontent.com
+ACTIVATION_KEY=utYAM6ueT-%+2f6_
+
+GOOGLE_CLIENT_ID = 567314733845-pou9amli9shnns3cm6a3q3g01b0kl1ep.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET = 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
+
+GOOGLE_CLIENT_REFRESH_TOKEN = 1//04sMsAnTnlFUxCgYIARAAGAQSNwF-L9IrmwGVVE38D2hLX5rYIZaV_DFD0dzUE6VuKPxkIyrzpV5jMmjcWKFR-Qndjzue1crT_Cs
+
+SENDER_EMAIL_ADDRESS = phuchoang7184@gmail.com
+
+CLIENT_URL=http://localhost:3000
