Add Forgot password and Renew password by email API

--- a/.env
+++ b/.env
@@ -2,11 +2,13 @@
 
 ACTIVATION_KEY=utYAM6ueT-%+2f6_
 
+ACCESS_KEY = 4.{:e2Tc[L+P,A7h
+
 GOOGLE_CLIENT_ID = 567314733845-pou9amli9shnns3cm6a3q3g01b0kl1ep.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET = 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
 
-GOOGLE_CLIENT_REFRESH_TOKEN = 1//04sMsAnTnlFUxCgYIARAAGAQSNwF-L9IrmwGVVE38D2hLX5rYIZaV_DFD0dzUE6VuKPxkIyrzpV5jMmjcWKFR-Qndjzue1crT_Cs
+GOOGLE_CLIENT_REFRESH_TOKEN = 1//04YjtVF6VruxyCgYIARAAGAQSNwF-L9Iri3c5J6q7yZ89P9O0kDYRrR1vvTQ9D5_oJGzuDgD3riBiU8I5EAcWYcIYa9CR0cwjVEM
 
 SENDER_EMAIL_ADDRESS = phuchoang7184@gmail.com
 
