--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js Rest Apis with Express, Sequelize & MySQL.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon ./bin/www"
   },
   "keywords": [
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "google-auth-library": "^7.11.0",
     "googleapis": "^92.0.0",
+    "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
